@@ -10,3 +10,8 @@ is making sure that spelling/grammer/whatever is usable and that you are using
 
 The release team should empty this file after each release.
 
+
+There is a new experimental function to gray out not available languages in the
+language selection dialog. This feature is available when Wesnoth is started
+with the --new-widgets parameter. Packagers of various platforms are encouraged
+to test this feature and report bugs when found. 
